--- a/Project/index.css
+++ b/Project/index.css
@@ -1,21 +1,61 @@
-*{
-    background-color: black;
-    color: #FFFFFF;
-    font-family: 'Kumbh Sans', sans-serif;
-}
-.test{
-    font-weight: 700;
-    font-size: 24px;
-}
-.logo{
-    display: inline-block;
+* {
+    background-color: #1f1f1f;
+    color: #ffffff;
+    font-family: "Kumbh Sans", sans-serif;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
-ul{
-    /* display: inline-block; */
-    list-style: none;
+
+.container {
+    height: 100px;
+    margin: 0 auto;
+    width: 1200px;
 }
-button{
-    border: white;
-    border-radius: 2px;
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 36px 0px;
+}
+
+.header-logo-section {
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    padding-left: 56px;
+}
+
+.header-signin-section {
+    display: flex;
+}
+
+.btn {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border-color: #ffffff;
+}
+
+.cart {
+    padding-right: 40px;
+    margin-top: 8px;
+}
+
+h1 {
+    margin-top: 60px;
+    font-size: 35px;
+    width: 350px;
+    /* height: 120px; */
+    line-height: 50px;
+    margin-bottom: 30px;
+}
+.header-body{
+    width: 420px;
+}
+.header{
+    margin-top: 80px;
+    display: flex;
 }
