--- a/Project/index.css
+++ b/Project/index.css
@@ -1,14 +1,15 @@
 * {
-    background-color: #1f1f1f;
     color: #ffffff;
     font-family: "Kumbh Sans", sans-serif;
     margin: 0;
     padding: 0;
     list-style: none;
 }
+body{
+    background-color: #1f1f1f;
+}
 
 .container {
-    height: 100px;
     margin: 0 auto;
     width: 1200px;
 }
@@ -35,8 +36,9 @@ nav {
 
 .btn {
     padding: 10px 20px;
+    border: 1px solid #ffffff;
     border-radius: 5px;
-    border-color: #ffffff;
+    background: #1f1f1f;
 }
 
 .cart {
@@ -48,14 +50,49 @@ h1 {
     margin-top: 60px;
     font-size: 35px;
     width: 350px;
-    /* height: 120px; */
     line-height: 50px;
     margin-bottom: 30px;
 }
-.header-body{
+
+.header-body {
     width: 420px;
 }
-.header{
+
+.header {
     margin-top: 80px;
     display: flex;
+    height: 920px;
+}
+
+.get-started-btn {
+    border: 1px solid #27ae60;
+    border-radius: 5px;
+    margin-top: 50px;
+    padding: 12px 32px;
+    background: #27ae60;
+}
+.card-1{
+    border: 1px solid #404040;
+    background: #404040;
+    border-radius: 5px;
+    padding-top: 30px;
+    padding-bottom: 200px;
+    padding-left: 90px;
+    padding-right: 90px;
+}
+.cards{
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    position: absolute;
+}
+.card-1-style{
+    font-size: 24px;
+    margin-bottom: 16px;
+    font-weight: 700;
+}
+.card-1-btn{
+    border: 1px solid #27ae60;
+    border-radius: 5px;
+    background: #27ae60;
 }
