--- a/Project/style.css
+++ b/Project/style.css
@@ -268,36 +268,79 @@ h1 {
     font-weight: 700;
     line-height: 45px;
 }
-.unconditional{
+
+.unconditional {
     width: 38%;
     margin: 0 auto;
 }
-.last-btn{
+
+.last-btn {
     padding-bottom: 100px;
 }
-.footer{
+
+.footer {
     padding-top: 107px;
 }
-.footer-logo{
+
+.footer-logo {
     padding-left: 120px;
     padding-right: 80px;
 }
-.footer{
+
+.footer {
     display: flex;
 }
-.youtube-logo{
+
+.youtube-logo {
     padding-right: 32px;
     margin-bottom: -10px;
 }
-.twitter-logo{
+
+.twitter-logo {
     padding-right: 32px;
     margin-bottom: -10px;
 }
-.instagram-logo{
+
+.instagram-logo {
     padding-right: 32px;
     margin-bottom: -10px;
 }
-.fb-logo{
+
+.fb-logo {
     padding-right: 300px;
     margin-bottom: -10px;
+}
+
+.email {
+    padding: 18px 88px 18px 18px;
+    border: 1px solid #282828;
+    border-radius: 5px;
+    background: #282828;
+}
+
+.footer-adjustment {
+    padding-right: 120px;
+}
+
+.submit {
+    padding: 18px 0px 18px 18px;
+    border: 1px solid #282828;
+    border-radius: 5px;
+    background: #282828;
+}
+
+.signup {
+    margin-top: -40px;
+    padding: 20px;
+    margin-left: -20px;
+}
+
+.email-submit {
+    border: 1px solid #282828;
+    border-radius: 5px;
+    background: #282828;
+    margin-bottom: 70px;
+}
+button{
+    cursor: pointer;;
 }
