--- a/Project/responsive.css
+++ b/Project/responsive.css
@@ -18,13 +18,97 @@
       max-width: 960px;
       margin: 0 auto;
     }
-    
+    .feature-cards{
+        flex-wrap: wrap;
+        justify-content: center;
+        
+    }
+    .feature-card{
+        width: 28%;
+    }
+    .div-1{
+        padding-top: 65px;
+        padding-left: 57px;
+    }
+    .heading-1-img{
+        width: 50%;
+    }
+    .header-1 {
+        font-size: 30px;
+    }
+    .para-1{
+        font-size: 14px;
+    }
+    .heading-2-img{
+        width: 42%;
+    }
+    .header-2 {
+        font-size: 30px;
+    }
+    .para-2{
+        font-size: 14px;
+        width: 85%;
+    }
+    .div-2 {
+        padding-top: 80px;
+        padding-right: -1px;
+    }
+    .header-div-2-1{
+        width: 95%;
+    }
+    .header-div-2{
+        left: 35%;
+    }
+    .header-1-image{
+        width: 50%;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width:991px) {
     .container {
       max-width: 720px;
       margin: 0 auto;
+    }
+    .navigate{
+        width: 107%;
+    }
+    .navigation{
+        padding-left: 100px;
+    }
+    .header-div-2{
+        right: -488px;
+    }
+    .header-div-2-1{
+        width: 40%;
+    }
+    .cart{
+        padding-right: 10px;
+    }
+    .header-signin-section{
+        padding-right: 50px;
+    }
+    .navigation{
+        padding-left: 17px;
+    }
+    .header-div-1{
+        font-size: 25px;
+    }
+    .header-body {
+        font-size: 18px;
+    }
+    .feature-cards{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .div-1 {
+        padding-left: 20px;
+        padding-top: 0px;
+    }
+    .heading-1-img{
+        width: 33%;
+    }
+    .heading-2-img{
+        width: 34%;
     }
 }
 
