--- a/Project/responsive.css
+++ b/Project/responsive.css
@@ -49,6 +49,9 @@
         font-size: 14px;
         width: 85%;
     }
+    h1{
+        width: 50%;
+    }
     .div-2 {
         padding-top: 80px;
         padding-right: -1px;
@@ -75,6 +78,9 @@
     .navigation{
         padding-left: 100px;
     }
+    .header{
+        margin-top: 20px; 
+    }
     .header-div-2{
         right: -488px;
     }
@@ -90,11 +96,14 @@
     .navigation{
         padding-left: 17px;
     }
-    .header-div-1{
-        font-size: 25px;
+    
+    .header-div-1 {
+        background-size: 636px 890px;
+        background-position-y: top;
     }
     .header-body {
-        font-size: 18px;
+        font-size: 16px;
+        width: 40%;
     }
     .feature-cards{
         flex-wrap: wrap;
@@ -109,6 +118,24 @@
     }
     .heading-2-img{
         width: 34%;
+    }
+    .div-2{
+        padding-top: 0px;
+    }
+    .para-2{
+        padding-right: 40px;
+    }
+    .header-1-image{
+        width: 33%;
+    }
+    .para-3{
+        padding: 0px;
+    }
+    .footer-image-section{
+        gap: 38px;
+    }
+    .footer-logo{
+        gap: 13px;
     }
 }
 
