--- a/Project/style.css
+++ b/Project/style.css
@@ -13,7 +13,7 @@ body {
 .container {
     margin: 0 auto;
     width: 1200px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
 }
 
 nav {
